# mcmc-embed

./: LICENSE  pyproject.toml
mcmc_embed/: bernoulli_mcmc.ipynb  conditional_gaussian_mcmc.ipynb
